hice los primeros 5 parrafos en prueba html

--- a/prueba.html
+++ b/prueba.html
@@ -1,26 +1,50 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <title>Primavera de Horacio Quiroga</title>
 <style>
 h1 {
-  color: blue;
-  font-family: verdana;
+  color: rgb(123, 0, 255);
+  font-family: 'Times New Roman', Times, serif;
   font-size: 300%;
 
 }
 p  {
-  color: red;
-  font-family: courier;
+  color: rgb(0, 0, 0);
+  font-family: courtier;
   font-size: 160%;
 }
 
-body {background-color: aquamarine;}
+body {background-color: rgb(253, 255, 254);}
 </style>
 </head>
 <body>
 
-<h1>This is a heading</h1>
-<p>This is a paragraph.</p>
-
+<h1 style="text-align: center">Primavera</h1>
+<p style="text-align: right;">Por: Horacio Quiroga</p>
+<p>
+  Era el martes de carnaval. Nébel acababa de entrar en el corso, ya al
+  oscurecer, y mientras deshacía un paquete de serpentinas, miró al 
+  carruaje de delante. Extrañado de una cara que no había visto la tarde
+  anterior, preguntó a sus compañeros:</p>
+  <p>--¿Quién es? No parece fea.  </p>
+  <p>--¡Un demonio! Es lindísima. Creo que sobrina, o cosa así, del doctor
+    Arrizabalaga. Llegó ayer, me parece...</p>
+    <p>Nébel fijó entonces atentamente los ojos en la hermosa criatura. Era
+      una chica muy joven aún, acaso no más de catorce años, pero
+      completamente núbil. Tenía, bajo el cabello muy oscuro, un rostro de
+      suprema blancura, de ese blanco mate y raso que es patrimonio
+      exclusivo de los cutis muy finos. Ojos azules, largos, perdiéndose
+      hacia las sienes en el cerco de sus negras pestañas. Acaso un poco
+      separados, lo que da, bajo una frente tersa, aire de mucha nobleza o
+      de gran terquedad. Pero sus ojos, así, llenaban aquel semblante en
+      flor con la luz de su belleza. Y al sentirlos Nébel detenidos un
+      momento en los suyos, quedó deslumbrado.</p>
+      <p>--¡Qué encanto!--murmuró, quedando inmóvil con una rodilla sobre al
+        almohadón del surrey. Un momento después las serpentinas volaban hacia
+        la victoria. Ambos carruajes estaban ya enlazados por el puente
+        colgante de cintas, y la que lo ocasionaba sonreía de vez en cuando al
+        galante muchacho.</p>
+        
 </body>
 </html>
