puse hasta qué encanto [...] desde luego

--- a/prueba.html
+++ b/prueba.html
@@ -45,6 +45,52 @@ body {background-color: rgb(253, 255, 254);}
         la victoria. Ambos carruajes estaban ya enlazados por el puente
         colgante de cintas, y la que lo ocasionaba sonreía de vez en cuando al
         galante muchacho.</p>
+        <p>Mas aquello llegaba ya a la falta de respeto a personas, cochero y aún
+          carruaje: sobre el hombro, la cabeza, látigo, guardabarros, las
+          serpentinas llovían sin cesar. Tanto fué, que las dos personas
+          sentadas atrás se volvieron y, bien que sonriendo, examinaron
+          atentamente al derrochador.</p>
+          <p>--¿Quiénes son?--preguntó Nébel en voz baja.</p>
+          <p>--El doctor Arrizabalaga; cierto que no lo conoces. La otra es la
+            madre de tu chica... Es cuñada del doctor.</p>
+            <p>Como en pos del examen, Arrizabalaga y la señora se sonrieran
+              francamente ante aquella exuberancia de juventud, Nébel se creyó en el
+              deber de saludarlos, a lo que respondió el terceto con jovial
+              condescencia.</p>
+              <p>Este fué el principio de un idilio que duró tres meses, y al que Nébel
+                aportó cuanto de adoración cabía en su apasionada adolescencia.
+                Mientras continuó el corso, y en Concordia se prolonga hasta horas
+                increíbles, Nébel tendió incesantemente su brazo hacia adelante, tan
+                bien, que el puño de su camisa, desprendido, bailaba sobre la mano.</p>
+                <p>Al día siguiente se reprodujo la escena; y como esta vez el corso se
+                  reanudaba de noche con batalla de flores, Nébel agotó en un cuarto de
+                  hora cuatro inmensas canastas. Arrizabalaga y la señora se reían,
+                  volviéndose a menudo, y la joven no apartaba casi sus ojos de Nébel.
+                  Este echó una mirada de desesperación a sus canastas vacías; mas sobre
+                  el almohadón del surrey quedaban aún uno, un pobre ramo de
+                  siemprevivas y jazmines del país. Nébel saltó con él por sobre la
+                  rueda del surrey, dislocóse casi un tobillo, y corriendo a la
+                  victoria, jadeante, empapado en sudor y el entusiasmo a flor de ojos,
+                  tendió el ramo a la joven. Ella buscó atolondradamente otro, pero no
+                  lo tenía. Sus acompañantes se rían.</p>
+                  <p>--¡Pero loca!--le dijo la madre, señalándole el pecho--¡ahí tienes
+                    uno!</p>
+                   <p>El carruaje arrancaba al trote. Nébel, que había descendido del
+                    estribo, afligido, corrió y alcanzó el ramo que la joven le tendía,
+                    con el cuerpo casi fuera del coche.</p> 
+                    <p>Nébel había llegado tres días atrás de Buenos Aires, donde concluía su
+                      bachillerato. Había permanecido allá siete años, de modo que su
+                      conocimiento de la sociedad actual de Concordia era mínimo. Debía
+                      quedar aún quince días en su ciudad natal, disfrutados en pleno
+                      sosiego de alma, si no de cuerpo; y he ahí que desde el segundo día
+                      perdía toda su serenidad. Pero en cambio ¡qué encanto!</p>
+                      <p>--¡Qué encanto!--se repetía pensando en aquel rayo de luz, flor y
+                        carne femenina que había llegado a él desde el carruaje. Se reconocía
+                        real y profundamente deslumbrado--y enamorado, desde luego.</p>
+                        
+
+
+
         
 </body>
 </html>
