--- a/prueba.html
+++ b/prueba.html
@@ -15,7 +15,7 @@ p  {
   font-size: 160%;
 }
 
-body {background-color: rgb(253, 255, 254);}
+body {background-color: rgb(255, 255, 255);}
 </style>
 </head>
 <body>
@@ -87,7 +87,30 @@ body {background-color: rgb(253, 255, 254);}
                       <p>--¡Qué encanto!--se repetía pensando en aquel rayo de luz, flor y
                         carne femenina que había llegado a él desde el carruaje. Se reconocía
                         real y profundamente deslumbrado--y enamorado, desde luego.</p>
-                        
+                        <p>¡Y si ella lo quisiera!... ¿Lo querría? Nébel, para dilucidarlo,
+                          confiaba mucho más que en el ramo de su pecho, en la precipitación
+                          aturdida con que la joven había buscado algo para darle. Evocaba
+                          claramente el brillo de sus ojos cuando lo vió llegar corriendo, la
+                          inquieta espectativa con que lo esperó, y--en otro orden, la morbidez
+                          del joven pecho, al tenderle el ramo.</p>
+                          <p>¡Y ahora, concluído! Ella se iba al día siguiente a Montevideo. ¿Qué
+                            le importaba lo demás, Concordia, sus amigos de antes, su mismo padre?
+                            Por lo menos iría con ella hasta Buenos Aires.</p>
+                            <p>Hicieron, efectivamente, el viaje juntos, y durante él, Nébel llegó al
+                              más alto grado de pasión que puede alcanzar un romántico muchacho de
+                              18 años, que se siente querido. La madre acogió el casi infantil
+                              idilio con afable complacencia, y se reía a menudo al verlos, hablando
+                              poco, sonriendo sin cesar, y mirándose infinitamente.</p>
+                              <p>La despedida fué breve, pues Nébel no quiso perder el último vestigio
+                                de cordura que le quedaba, cortando su carrera tras ella.</p>
+                                <p>Volverían a Concordia en el invierno, acaso una temporada. ¿Iría él?
+                                  "¡Oh, no volver yo!" Y mientras Nébel se alejaba, tardo, por el
+                                  muelle, volviéndose a cada momento, ella, de pecho sobre la borda, la
+                                  cabeza un poco baja, lo seguía con los ojos, mientras en la planchada
+                                  los marineros levantaban los suyos risueños a aquel idilio--y al
+                                  vestido, corto aún, de la tiernísima novia.</p>
+
+
 
 
 
